test/spec/test-fail-table.snap
Error: Command failed: node --no-extra-info-on-fatal-exception -r ./test.js test/test-fail-table.js

test.js:247
				if (item.f.length > i.r.length + 2 || i.r.length !== spliceData[2].r.length) throw "Invalid data for: " + i.n
				                                                                             ^
Invalid data for: should fail on invalid table
(Use `node --trace-uncaught ...` to show where the exception was thrown)
